Replaced jdk11 to jdk8